tests/snapshots/cli_insta__help_mcp.filter-test.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - filter-test
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Test a Semantic Version against a filter

Usage: sem-tool filter-test [OPTIONS] --filter <FILTER> --semantic-version <SEMANTIC_VERSION>

Options:
      --filter <FILTER>
          Filter to test against a specific Semantic Version.
          
          These filter rules are described by the semver crate `VersionReq` documentation, and more generally in the cargo book.
          
          In particular, note the warnings around pre-releases in the VersionReq documentation.
          
          The Status Code will be 0 if it passes, non-zero if it fails.
          
          References: - https://docs.rs/semver/1.0.25/semver/struct.VersionReq.html - https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html

      --semantic-version <SEMANTIC_VERSION>
          Version to test

      --mcp
          Run an MCP server over stdio that exposes this CLI's clap schema

      --mcp-http <ADDR>
          Run an MCP server over Streamable HTTP at ADDR (e.g. 127.0.0.1:8080)

      --export-skills <DIR>
          Generate Agent Skills (SKILL.md) from tools, resources, and prompts, then exit

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
