tests/snapshots/cli_insta__latest.alias.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - "-o"
    - text
    - latest
    - 1.0.0
    - 2.0.0
---
success: true
exit_code: 0
----- stdout -----
2.0.0

----- stderr -----
